flux/apps/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://autobrr.multimedia-factory.svc:7474"
    uptime-kuma.io/name: "autobrr"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Arr Stack"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      enableServiceLinks: false
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7474
          volumeMounts:
            - name: autobrr-config
              mountPath: /config
      volumes:
        - name: autobrr-config
          persistentVolumeClaim:
            claimName: autobrr-config
