flux/apps/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: multimedia-factory
spec:
  selector:
    app: autobrr
  ports:
    - protocol: TCP
      port: 7474
      targetPort: 7474
  type: ClusterIP
